<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8efde"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"

            android:layout_marginBottom="60dp"
            android:contentDescription="Logo"
            app:srcCompat="@mipmap/ic_logo_matcha" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_login_username"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/title_login_username_hint"
            android:inputType="text"
            android:padding="12dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login_password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/title_login_password_hint"
            android:inputType="textPassword"
            android:padding="12dp" />

        <CheckBox
            android:id="@+id/chbRemember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login_save_info"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="do_login"
                android:text="@string/title_login_button_login"
                android:backgroundTint="#87684B"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/imgExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="Thoát"
                android:onClick="do_exit"
                android:padding="12dp"
                app:srcCompat="@mipmap/ic_login_exit"
                app:tint="#87684B" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>